# udon-peripheral-animation

./: .gitignore  PLANS.md  pyproject.toml
boards/shields/nice_view_custom/: CMakeLists.txt  Kconfig.defconfig
boards/shields/nice_view_custom/widgets/: generated_art.c  generated_art.h  peripheral_status.c
docs/: pipeline_design.md
tests/pipeline/: test_cli_flow.py  test_emit_zmk.py  test_export_lvgl.py  test_firmware_asset_integration.py  test_manifest.py  test_package_layout.py  test_parameter_overrides.py  test_pattern_mapping.py  test_preview_outputs.py  test_stage_dependencies.py  test_static_stages_basic.py  test_subject_processing.py
tools/pipeline/: __init__.py  config.py  main.py  models.py  presets.py
tools/pipeline/patterns/: default_2x2.json  soft_4x4.json
tools/pipeline/stages/: cleanup.py  compose.py  export_lvgl.py  grayscale.py  ingest.py  pattern.py  preview.py  quantize.py  subject.py
